# clipboard-translator

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docker.yml  rust.yml
src/: library.rs  main.rs
