[package]
name = "key-translator"
version = "0.1.0"
authors = ["victor.fedorenko <fedorenko22116@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
notify-rust = "3"
reqwest = {version = "0.10.0", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notifica = "1.0.2"
clap = { version = "2.33.0", features = ["yaml"] }
fake-useragent = "0.1.3"
