[package]
name = "clipboard-translator"
version = "0.1.1"
authors = ["victor.fedorenko <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
reqwest = {version = "0.10.0", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "2.33.0", features = ["yaml"] }
fake-useragent = "0.1.3"

[target.'cfg(unix)'.dependencies]
notify-rust = "3"
