[package]
name = "clipboard-translator"
version = "0.1.4"
authors = ["victor.fedorenko <fedorenko22116@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
reqwest = {version = "0.10.0", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "2.33.0", features = ["yaml"] }
dirs = "2.0"

[target.'cfg(windows)'.dependencies]
winrt-notification = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
notify-rust = "3"
